// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> Checked story renders snapshot 1`] = `
<div
  class="checkbox"
>
  <span
    class="input__wrapper"
  >
    <input
      checked=""
      class="checkbox__input"
      data-bootstrap-override="checkbox"
      id="2"
      style="--checkbox-svg-size: 1.25rem;"
      type="checkbox"
    />
    <svg
      aria-hidden="true"
      height="1.25rem"
      viewBox="0 0 20 20"
      width="1.25rem"
    >
      <rect
        class="checkmark__outline"
        fill="none"
        height="18"
        rx="3"
        stroke="currentColor"
        stroke-width="2"
        width="18"
        x="1"
        y="1"
      />
      <use
        class="checkmark__content"
        fill="none"
        xlink:href="test-file-stub#check"
      />
    </svg>
  </span>
  <label
    class="label label--md"
    data-bootstrap-override="label"
    for="2"
    style="--checkbox-svg-size: 1.25rem;"
  >
    Checkbox
  </label>
</div>
`;

exports[`<Checkbox /> Default story renders snapshot 1`] = `
<div
  class="checkbox"
>
  <span
    class="input__wrapper"
  >
    <input
      class="checkbox__input"
      data-bootstrap-override="checkbox"
      id="1"
      style="--checkbox-svg-size: 1.25rem;"
      type="checkbox"
    />
    <svg
      aria-hidden="true"
      height="1.25rem"
      viewBox="0 0 20 20"
      width="1.25rem"
    >
      <rect
        class="checkmark__outline"
        fill="none"
        height="18"
        rx="3"
        stroke="currentColor"
        stroke-width="2"
        width="18"
        x="1"
        y="1"
      />
      <use
        class="checkmark__content"
        fill="none"
        xlink:href="test-file-stub#check"
      />
    </svg>
  </span>
  <label
    class="label label--md"
    data-bootstrap-override="label"
    for="1"
    style="--checkbox-svg-size: 1.25rem;"
  >
    Checkbox
  </label>
</div>
`;

exports[`<Checkbox /> Disabled story renders snapshot 1`] = `
<table
  class="disabled--table"
>
  <tbody>
    <tr>
      <td>
        <div
          class="checkbox"
        >
          <span
            class="input__wrapper input__wrapper--disabled"
          >
            <input
              class="checkbox__input"
              data-bootstrap-override="checkbox"
              disabled=""
              id="6"
              style="--checkbox-svg-size: 1.25rem;"
              type="checkbox"
            />
            <svg
              aria-hidden="true"
              height="1.25rem"
              viewBox="0 0 20 20"
              width="1.25rem"
            >
              <rect
                class="checkmark__outline"
                fill="none"
                height="18"
                rx="3"
                stroke="currentColor"
                stroke-width="2"
                width="18"
                x="1"
                y="1"
              />
              <use
                class="checkmark__content"
                fill="none"
                xlink:href="test-file-stub#check"
              />
            </svg>
          </span>
          <label
            class="label label--md label--disabled"
            data-bootstrap-override="label"
            for="6"
            style="--checkbox-svg-size: 1.25rem;"
          >
            Disabled
          </label>
        </div>
      </td>
      <td>
        <div
          class="checkbox"
        >
          <span
            class="input__wrapper"
          >
            <input
              class="checkbox__input"
              data-bootstrap-override="checkbox"
              id="7"
              readonly=""
              style="--checkbox-svg-size: 1.25rem;"
              type="checkbox"
            />
            <svg
              aria-hidden="true"
              height="1.25rem"
              viewBox="0 0 20 20"
              width="1.25rem"
            >
              <rect
                class="checkmark__outline"
                fill="none"
                height="18"
                rx="3"
                stroke="currentColor"
                stroke-width="2"
                width="18"
                x="1"
                y="1"
              />
              <use
                class="checkmark__content"
                fill="none"
                xlink:href="test-file-stub#check"
              />
            </svg>
          </span>
          <label
            class="label label--md"
            data-bootstrap-override="label"
            for="7"
            style="--checkbox-svg-size: 1.25rem;"
          >
            Default
          </label>
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div
          class="checkbox"
        >
          <span
            class="input__wrapper input__wrapper--disabled"
          >
            <input
              checked=""
              class="checkbox__input"
              data-bootstrap-override="checkbox"
              disabled=""
              id="8"
              style="--checkbox-svg-size: 1.25rem;"
              type="checkbox"
            />
            <svg
              aria-hidden="true"
              height="1.25rem"
              viewBox="0 0 20 20"
              width="1.25rem"
            >
              <rect
                class="checkmark__outline"
                fill="none"
                height="18"
                rx="3"
                stroke="currentColor"
                stroke-width="2"
                width="18"
                x="1"
                y="1"
              />
              <use
                class="checkmark__content"
                fill="none"
                xlink:href="test-file-stub#check"
              />
            </svg>
          </span>
          <label
            class="label label--md label--disabled"
            data-bootstrap-override="label"
            for="8"
            style="--checkbox-svg-size: 1.25rem;"
          >
            Disabled
          </label>
        </div>
      </td>
      <td>
        <div
          class="checkbox"
        >
          <span
            class="input__wrapper"
          >
            <input
              checked=""
              class="checkbox__input"
              data-bootstrap-override="checkbox"
              id="9"
              readonly=""
              style="--checkbox-svg-size: 1.25rem;"
              type="checkbox"
            />
            <svg
              aria-hidden="true"
              height="1.25rem"
              viewBox="0 0 20 20"
              width="1.25rem"
            >
              <rect
                class="checkmark__outline"
                fill="none"
                height="18"
                rx="3"
                stroke="currentColor"
                stroke-width="2"
                width="18"
                x="1"
                y="1"
              />
              <use
                class="checkmark__content"
                fill="none"
                xlink:href="test-file-stub#check"
              />
            </svg>
          </span>
          <label
            class="label label--md"
            data-bootstrap-override="label"
            for="9"
            style="--checkbox-svg-size: 1.25rem;"
          >
            Default
          </label>
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div
          class="checkbox"
        >
          <span
            class="input__wrapper input__wrapper--disabled"
          >
            <input
              aria-checked="mixed"
              checked=""
              class="checkbox__input"
              data-bootstrap-override="checkbox"
              disabled=""
              id="10"
              style="--checkbox-svg-size: 1.25rem;"
              type="checkbox"
            />
            <svg
              aria-hidden="true"
              height="1.25rem"
              viewBox="0 0 20 20"
              width="1.25rem"
            >
              <rect
                class="checkmark__outline"
                fill="none"
                height="18"
                rx="3"
                stroke="currentColor"
                stroke-width="2"
                width="18"
                x="1"
                y="1"
              />
              <use
                class="checkmark__content"
                fill="none"
                xlink:href="test-file-stub#remove"
              />
            </svg>
          </span>
          <label
            class="label label--md label--disabled"
            data-bootstrap-override="label"
            for="10"
            style="--checkbox-svg-size: 1.25rem;"
          >
            Disabled
          </label>
        </div>
      </td>
      <td>
        <div
          class="checkbox"
        >
          <span
            class="input__wrapper"
          >
            <input
              aria-checked="mixed"
              checked=""
              class="checkbox__input"
              data-bootstrap-override="checkbox"
              id="11"
              readonly=""
              style="--checkbox-svg-size: 1.25rem;"
              type="checkbox"
            />
            <svg
              aria-hidden="true"
              height="1.25rem"
              viewBox="0 0 20 20"
              width="1.25rem"
            >
              <rect
                class="checkmark__outline"
                fill="none"
                height="18"
                rx="3"
                stroke="currentColor"
                stroke-width="2"
                width="18"
                x="1"
                y="1"
              />
              <use
                class="checkmark__content"
                fill="none"
                xlink:href="test-file-stub#remove"
              />
            </svg>
          </span>
          <label
            class="label label--md"
            data-bootstrap-override="label"
            for="11"
            style="--checkbox-svg-size: 1.25rem;"
          >
            Default
          </label>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<Checkbox /> Disabled story renders snapshot 2`] = `
<div
  class="checkbox"
>
  <span
    class="input__wrapper input__wrapper--disabled"
  >
    <input
      class="checkbox__input"
      data-bootstrap-override="checkbox"
      disabled=""
      id="22"
      style="--checkbox-svg-size: 1.25rem;"
      type="checkbox"
    />
    <svg
      aria-hidden="true"
      height="1.25rem"
      viewBox="0 0 20 20"
      width="1.25rem"
    >
      <rect
        class="checkmark__outline"
        fill="none"
        height="18"
        rx="3"
        stroke="currentColor"
        stroke-width="2"
        width="18"
        x="1"
        y="1"
      />
      <use
        class="checkmark__content"
        fill="none"
        xlink:href="test-file-stub#check"
      />
    </svg>
  </span>
  <label
    class="label label--md label--disabled"
    data-bootstrap-override="label"
    for="22"
    style="--checkbox-svg-size: 1.25rem;"
  >
    Disabled
  </label>
</div>
`;

exports[`<Checkbox /> Indeterminate story renders snapshot 1`] = `
<div
  class="checkbox"
>
  <span
    class="input__wrapper"
  >
    <input
      aria-checked="mixed"
      checked=""
      class="checkbox__input"
      data-bootstrap-override="checkbox"
      id="5"
      readonly=""
      style="--checkbox-svg-size: 1.25rem;"
      type="checkbox"
    />
    <svg
      aria-hidden="true"
      height="1.25rem"
      viewBox="0 0 20 20"
      width="1.25rem"
    >
      <rect
        class="checkmark__outline"
        fill="none"
        height="18"
        rx="3"
        stroke="currentColor"
        stroke-width="2"
        width="18"
        x="1"
        y="1"
      />
      <use
        class="checkmark__content"
        fill="none"
        xlink:href="test-file-stub#remove"
      />
    </svg>
  </span>
  <label
    class="label label--md"
    data-bootstrap-override="label"
    for="5"
    style="--checkbox-svg-size: 1.25rem;"
  >
    Checkbox
  </label>
</div>
`;

exports[`<Checkbox /> LabelsOnly story renders snapshot 1`] = `
<label
  class="label label--md"
  data-bootstrap-override="label"
  for="medium-label"
  style="--checkbox-svg-size: 1.25rem;"
>
  Medium label
</label>
`;

exports[`<Checkbox /> LongLabels story renders snapshot 1`] = `
<div
  class="longlabels--grid"
>
  <div
    class="checkbox"
  >
    <span
      class="input__wrapper"
    >
      <input
        class="checkbox__input"
        data-bootstrap-override="checkbox"
        id="18"
        style="--checkbox-svg-size: 1.25rem;"
        type="checkbox"
      />
      <svg
        aria-hidden="true"
        height="1.25rem"
        viewBox="0 0 20 20"
        width="1.25rem"
      >
        <rect
          class="checkmark__outline"
          fill="none"
          height="18"
          rx="3"
          stroke="currentColor"
          stroke-width="2"
          width="18"
          x="1"
          y="1"
        />
        <use
          class="checkmark__content"
          fill="none"
          xlink:href="test-file-stub#check"
        />
      </svg>
    </span>
    <label
      class="label label--md"
      data-bootstrap-override="label"
      for="18"
      style="--checkbox-svg-size: 1.25rem;"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit
    </label>
  </div>
  <div
    class="checkbox"
  >
    <span
      class="input__wrapper"
    >
      <input
        class="checkbox__input"
        data-bootstrap-override="checkbox"
        id="19"
        style="--checkbox-svg-size: 1.25rem;"
        type="checkbox"
      />
      <svg
        aria-hidden="true"
        height="1.25rem"
        viewBox="0 0 20 20"
        width="1.25rem"
      >
        <rect
          class="checkmark__outline"
          fill="none"
          height="18"
          rx="3"
          stroke="currentColor"
          stroke-width="2"
          width="18"
          x="1"
          y="1"
        />
        <use
          class="checkmark__content"
          fill="none"
          xlink:href="test-file-stub#check"
        />
      </svg>
    </span>
    <label
      class="label label--sm"
      data-bootstrap-override="label"
      for="19"
      style="--checkbox-svg-size: 1.25rem;"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit
    </label>
  </div>
  <div
    class="checkbox"
  >
    <span
      class="input__wrapper input__wrapper--disabled"
    >
      <input
        class="checkbox__input"
        data-bootstrap-override="checkbox"
        disabled=""
        id="20"
        style="--checkbox-svg-size: 1.25rem;"
        type="checkbox"
      />
      <svg
        aria-hidden="true"
        height="1.25rem"
        viewBox="0 0 20 20"
        width="1.25rem"
      >
        <rect
          class="checkmark__outline"
          fill="none"
          height="18"
          rx="3"
          stroke="currentColor"
          stroke-width="2"
          width="18"
          x="1"
          y="1"
        />
        <use
          class="checkmark__content"
          fill="none"
          xlink:href="test-file-stub#check"
        />
      </svg>
    </span>
    <label
      class="label label--md label--disabled"
      data-bootstrap-override="label"
      for="20"
      style="--checkbox-svg-size: 1.25rem;"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit
    </label>
  </div>
  <div
    class="checkbox"
  >
    <span
      class="input__wrapper input__wrapper--disabled"
    >
      <input
        class="checkbox__input"
        data-bootstrap-override="checkbox"
        disabled=""
        id="21"
        style="--checkbox-svg-size: 1.25rem;"
        type="checkbox"
      />
      <svg
        aria-hidden="true"
        height="1.25rem"
        viewBox="0 0 20 20"
        width="1.25rem"
      >
        <rect
          class="checkmark__outline"
          fill="none"
          height="18"
          rx="3"
          stroke="currentColor"
          stroke-width="2"
          width="18"
          x="1"
          y="1"
        />
        <use
          class="checkmark__content"
          fill="none"
          xlink:href="test-file-stub#check"
        />
      </svg>
    </span>
    <label
      class="label label--sm label--disabled"
      data-bootstrap-override="label"
      for="21"
      style="--checkbox-svg-size: 1.25rem;"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit
    </label>
  </div>
</div>
`;

exports[`<Checkbox /> Small story renders snapshot 1`] = `
<div
  class="checkbox"
>
  <span
    class="input__wrapper"
  >
    <input
      class="checkbox__input"
      data-bootstrap-override="checkbox"
      id="3"
      style="--checkbox-svg-size: 1.25rem;"
      type="checkbox"
    />
    <svg
      aria-hidden="true"
      height="1.25rem"
      viewBox="0 0 20 20"
      width="1.25rem"
    >
      <rect
        class="checkmark__outline"
        fill="none"
        height="18"
        rx="3"
        stroke="currentColor"
        stroke-width="2"
        width="18"
        x="1"
        y="1"
      />
      <use
        class="checkmark__content"
        fill="none"
        xlink:href="test-file-stub#check"
      />
    </svg>
  </span>
  <label
    class="label label--sm"
    data-bootstrap-override="label"
    for="3"
    style="--checkbox-svg-size: 1.25rem;"
  >
    Checkbox
  </label>
</div>
`;

exports[`<Checkbox /> SmallChecked story renders snapshot 1`] = `
<div
  class="checkbox"
>
  <span
    class="input__wrapper"
  >
    <input
      checked=""
      class="checkbox__input"
      data-bootstrap-override="checkbox"
      id="4"
      style="--checkbox-svg-size: 1.25rem;"
      type="checkbox"
    />
    <svg
      aria-hidden="true"
      height="1.25rem"
      viewBox="0 0 20 20"
      width="1.25rem"
    >
      <rect
        class="checkmark__outline"
        fill="none"
        height="18"
        rx="3"
        stroke="currentColor"
        stroke-width="2"
        width="18"
        x="1"
        y="1"
      />
      <use
        class="checkmark__content"
        fill="none"
        xlink:href="test-file-stub#check"
      />
    </svg>
  </span>
  <label
    class="label label--sm"
    data-bootstrap-override="label"
    for="4"
    style="--checkbox-svg-size: 1.25rem;"
  >
    Checkbox
  </label>
</div>
`;

exports[`<Checkbox /> WithCustomPositioning story renders snapshot 1`] = `
<span>
  <label
    class="label label--md"
    data-bootstrap-override="label"
    for="test"
    style="--checkbox-svg-size: 1.25rem;"
  >
    label on left
  </label>
  <span
    class="input__wrapper"
  >
    <input
      class="checkbox__input"
      data-bootstrap-override="checkbox"
      id="test"
      style="--checkbox-svg-size: 1.25rem;"
      type="checkbox"
    />
    <svg
      aria-hidden="true"
      height="1.25rem"
      viewBox="0 0 20 20"
      width="1.25rem"
    >
      <rect
        class="checkmark__outline"
        fill="none"
        height="18"
        rx="3"
        stroke="currentColor"
        stroke-width="2"
        width="18"
        x="1"
        y="1"
      />
      <use
        class="checkmark__content"
        fill="none"
        xlink:href="test-file-stub#check"
      />
    </svg>
  </span>
</span>
`;

exports[`<Checkbox /> WithoutVisibleLabel story renders snapshot 1`] = `
<div
  class="checkbox"
>
  <span
    class="input__wrapper"
  >
    <input
      aria-label="a checkbox has no name"
      class="checkbox__input"
      data-bootstrap-override="checkbox"
      id="12"
      style="--checkbox-svg-size: 1.25rem;"
      type="checkbox"
    />
    <svg
      aria-hidden="true"
      height="1.25rem"
      viewBox="0 0 20 20"
      width="1.25rem"
    >
      <rect
        class="checkmark__outline"
        fill="none"
        height="18"
        rx="3"
        stroke="currentColor"
        stroke-width="2"
        width="18"
        x="1"
        y="1"
      />
      <use
        class="checkmark__content"
        fill="none"
        xlink:href="test-file-stub#check"
      />
    </svg>
  </span>
</div>
`;
